<!--
   - Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license.
   - See LICENSE in the project root for license information.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SendMailActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/description_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="visible" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/edit_text_min_height"
        android:layout_below="@+id/descriptionTextView"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:visibility="visible"
        android:nextFocusForward="@+id/sendMailButton"
        android:nextFocusDown="@+id/sendMailButton"
        android:nextFocusRight="@+id/sendMailButton" />

    <Button
        android:id="@+id/sendMailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_mail_button_text"
        android:onClick="onSendMailButtonClick"
        android:layout_below="@+id/emailEditText"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:nextFocusForward="@+id/emailEditText"
        android:nextFocusUp="@+id/emailEditText"
        android:nextFocusLeft="@+id/emailEditText" />

    <ProgressBar
        android:id="@+id/sendMailProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEditText"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/conclusionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendMailButton"
        android:layout_centerHorizontal="true"
        android:text="@string/conclusion_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

</RelativeLayout>
